fixed required form submission and center aligned answers

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ ul {
   padding: 0;
 }
 
+li {
+  line-height: 1.25em;
+}
+
 main {
   display: block;
   margin: 15px;
@@ -61,14 +65,18 @@ h2 {
   font-size: 25px;
   font-weight: bold;
   padding: 10px;
+  text-align: center;
+  line-height: 1.5em;
+}
+
+.buttonContainer {
+  text-align: center;
 }
 
 button {
   font-size: 20px;
   margin: 40px;
   padding: 10px;
-  margin-left: auto;
-  margin-right: auto;
   background-color: rgb(255,235,0);
   border: solid 2px black;
   border-radius: 5px;
@@ -80,33 +88,37 @@ button:hover {
   background-color: rgb(207, 190, 0);
 }
 
-.questionAnswerForm {
-  text-align: center;
-}
-
 .questionTitle {
   font-size: 20px;
   font-weight: bold;
 }
 
-fieldset {
+form {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  justify-content: center;
+}
+
+fieldset {
+  display: inline-block;
+  margin: auto;
 }
 
 .answerOption {
   padding: 5px;
   font-size: 20px;
+  display: flex;
 }
 
 p {
   margin: 15px;
   font-size: 20px;
+  text-align: center;
+  line-height: 1.25em;
 }
 
 .icon {
-  max-width: 150px;
+  max-width: 200px;
   display: block;
   margin: auto;
 }
@@ -142,5 +154,9 @@ p {
 
   .icon {
     display: none;
+  }
+
+  button {
+    margin: 20px;
   }
 }
